# stm32-cmake

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  arm-none-eabi-gcc.cmake  jlink-sw.cfg  readme.md  stm32l4_cmake_freertos.ioc
Core/Inc/: FreeRTOSConfig.h  stm32l4xx_it.h
Core/Src/: freertos.c  gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  usart.c
UserCode/: user_cpp.cpp  user_cpp.hpp  user_main.c
